# Rewind

./: .gitignore  .rewind.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
docs/: rewind-ci.yml
packaging/homebrew/: rewind.rb
src/: ci.rs  cli.rs  config.rs  diff.rs  error.rs  exec.rs  investigate.rs  lib.rs  main.rs  objects.rs  paths.rs  repo.rs  restore.rs  session.rs  snapshot.rs  util.rs
src/db/: migrations.rs  mod.rs  models.rs
src/tracking/: mod.rs  watcher.rs
src/tui/: app.rs  mod.rs  pty.rs  ui.rs
tests/: cli.rs  end_to_end.rs
